Projet total/Assembleur/tests/bad/testfile-bad-rz.ms
; register %rz is not visible to the programmer
    .section text
add %rz %rz %rz